--- a/macos.local/.flake/home/core.nix.org
+++ b/macos.local/.flake/home/core.nix.org
@@ -14,6 +14,9 @@ Set up home manager for my user account and import submodules.
     home.username = "jjanzen";
     home.homeDirectory = "/Users/jjanzen";
     home.file.".wallpaper".source = ./.wallpaper;
+    home.sessionPath = [
+      "/opt/homebrew/bin"
+    ];
 
     home.stateVersion = "24.05";
     programs.home-manager.enable = true;
