--- a/common/.flake/home/programs/neovim.nix.org
+++ b/common/.flake/home/programs/neovim.nix.org
@@ -1,7 +1,7 @@
 #+title: Neovim Settings
 
 Create a simple Neovim configuration.
-#+begin_src nix :tangle ~/.flake/home/programs/neovim.nix :mkdirp yes
+#+begin_src nix
   { config, pkgs, ... }:
 
   {
