--- a/common/.flake/system/yabai.nix.org
+++ b/common/.flake/system/yabai.nix.org
@@ -10,11 +10,11 @@
       config = {
         layout = "bsp";
         auto_balance = "on";
-        top_padding = 10;
-        bottom_padding = 10;
-        left_padding = 10;
-        right_padding = 10;
-        window_gap = 10;
+        top_padding = 0;
+        bottom_padding = 0;
+        left_padding = 0;
+        right_padding = 0;
+        window_gap = 0;
         window_shadow = "float";
         focus_follows_mouse = "autoraise";
         mouse_follows_focus = "on";
@@ -26,6 +26,7 @@
       extraConfig = ''
         yabai -m rule --add app="^System Settings$" manage=off
         yabai -m rule --add app="^Calculator$" manage=off
+        yabai -m rule --add app="^mpv" manage=off
       '';
     };
   }
