--- a/macos.local/.flake/system/core.nix.org
+++ b/macos.local/.flake/system/core.nix.org
@@ -5,15 +5,21 @@ This file imports various system configuration components in addition to enablin
 #+begin_src nix
   { config, pkgs, ... }:
 
-  {
+  let
+    inherit (pkgs) aspellWithDicts;
+
+    myaspell = aspellWithDicts (d: [d.en d.en-computers d.en-science]);
+  in {
+   nixpkgs.config.allowUnfree = true;
+
     imports = [
       ./skhd.nix
       ./yabai.nix
     ];
 
     environment.systemPackages = with pkgs; [
-      emacs-macport
       gnupg
+      myaspell
       neovim
       skhd
     ];
