--- a/common/.flake/system/skhd.nix.org
+++ b/common/.flake/system/skhd.nix.org
@@ -41,7 +41,7 @@
         cmd + shift - 0 : yabai -m window --space 10
         cmd + shift - f : yabai -m window --toggle zoom-fullscreen
         cmd + shift - space : yabai -m window --toggle float
-        shift + ctrl - s : open /System/Applications/Utilities/Screenshot.app
+        cmd + shift - s : open /System/Applications/Utilities/Screenshot.app
       '';
     };
   }
