migrate brew to nix

--- a/common/.config/emacs/tools.el.org
+++ b/common/.config/emacs/tools.el.org
@@ -18,6 +18,20 @@ Install Magit for Git integration.
 (setq tramp-default-method "ssh")
 #+end_src
 
+* Fuzzy Finder
+#+begin_src emacs-lisp
+  (use-package fzf
+    :bind
+      ("C-c C-f" . fzf)
+    :config
+    (setq fzf/args "-x --color 16 --print-query --margin=1,0 --no-hscroll"
+          fzf/executable "fzf"
+          fzf/git-grep-args "-i --line-number %s"
+          fzf/grep-command "grep -nrH"
+          fzf/position-bottom nil
+          fzf/window-height 15))
+#+end_src
+
 * Document Viewing
 Replace =DocView= with a better document viewer from =pdf-tools=.
 #+begin_src emacs-lisp
