--- a/macos.local/.flake/flake.nix.org
+++ b/macos.local/.flake/flake.nix.org
@@ -19,6 +19,7 @@
           ./system/core.nix
           home-manager.darwinModules.home-manager
           {
+            home-manager.backupFileExtension = "bak";
             home-manager.useGlobalPkgs = true;
             home-manager.useUserPackages = true;
             home-manager.users.jjanzen = import ./home/core.nix;
