--- a/macos.local/.flake/home/programs/emacs/core.nix.org
+++ b/macos.local/.flake/home/programs/emacs/core.nix.org
@@ -24,5 +24,37 @@
         '';
       };
     };
+
+    nixpkgs.overlays = [
+      (final: prev:
+        {
+          emacs29-pgtk = prev.emacs29-pgtk.overrideAttrs (old: {
+            patches =
+          (old.patches or [])
+          ++ [
+            # Fix OS window role (needed for window managers like yabai)
+            (prev.fetchpatch {
+              url = "https://raw.githubusercontent.com/d12frosted/homebrew-emacs-plus/master/patches/emacs-28/fix-window-role.patch";
+              sha256 = "0c41rgpi19vr9ai740g09lka3nkjk48ppqyqdnncjrkfgvm2710z";
+            })
+            # Enable rounded window with no decoration
+            (prev.fetchpatch {
+              url = "https://raw.githubusercontent.com/d12frosted/homebrew-emacs-plus/master/patches/emacs-29/round-undecorated-frame.patch";
+              sha256 = "111i0r3ahs0f52z15aaa3chlq7ardqnzpwp8r57kfsmnmg6c2nhf";
+            })
+            # Make Emacs aware of OS-level light/dark mode
+            (prev.fetchpatch {
+              url = "https://raw.githubusercontent.com/d12frosted/homebrew-emacs-plus/master/patches/emacs-28/system-appearance.patch";
+              sha256 = "14ndp2fqqc95s70fwhpxq58y8qqj4gzvvffp77snm2xk76c1bvnn";
+            })
+          ];
+          });
+        }
+      )
+    ];
+    programs.emacs = {
+      enable = true;
+      package = pkgs.emacs29-pgtk;
+    };
   }
 #+end_src
