--- a/macos.local/.flake/home/programs/emacs/core.nix.org
+++ b/macos.local/.flake/home/programs/emacs/core.nix.org
@@ -53,7 +53,7 @@
       )
     ];
     programs.emacs = {
-      enable = true;
+      enable = false;
       package = pkgs.emacs29-pgtk;
     };
   }
