--- a/macos.local/.flake/flake.nix.org
+++ b/macos.local/.flake/flake.nix.org
@@ -20,7 +20,7 @@
           home-manager.darwinModules.home-manager
           {
             home-manager.backupFileExtension = "bak";
-            home-manager.useGlobalPkgs = true;
+            home-manager.useGlobalPkgs = false;
             home-manager.useUserPackages = true;
             home-manager.users.jjanzen = import ./home/core.nix;
           }
