--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -26,11 +26,12 @@
         "dotnet"
         "eza"
         "fd"
+        "gcc"
         "gnutls"
         "ffmpeg"
         "fzf"
-        "gpgme"
         "go"
+        "gpgme"
         "grep"
         "htop"
         "hunspell"
@@ -40,6 +41,7 @@
         "jq"
         "lesspipe"
         "latexdiff"
+        "libgccjit"
         "llvm@18"
         "marksman"
         "meson"
