--- a/macos.local/.flake/home/programs/emacs/core.nix.org
+++ b/macos.local/.flake/home/programs/emacs/core.nix.org
@@ -16,7 +16,7 @@
         executable = true;
         text = ''
         #!/bin/sh
-        emacsclient -c & disown
+        emacsclient -c
         '';
       };
     };
