--- a/common/.config/emacs/package-setup.el.org
+++ b/common/.config/emacs/package-setup.el.org
@@ -1,6 +1,16 @@
 #+title: Emacs Package Setup
 Install =straight= for better package management.
 #+begin_src emacs-lisp :tangle ~/.config/emacs/package-setup.el :mkdirp yes
+    (defun set-exec-path-from-shell-PATH ()
+     (interactive)
+     (let ((path-from-shell (replace-regexp-in-string
+                             "[ \t\n]*$" "" (shell-command-to-string
+                                             "$SHELL --login -c 'echo $PATH'"))))
+
+       (setenv "PATH" path-from-shell)
+       (setq exec-path (split-string path-from-shell path-separator))))
+
+  (set-exec-path-from-shell-PATH)
   (setq native-comp-async-report-warnings-errors 'silent)
   (defvar bootstrap-version)
   (let ((bootstrap-file
