--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -15,6 +15,7 @@
     ];
 
     home.packages = with pkgs; [
+      discordo
       python312
       python312Packages.black
       python312Packages.pylint
